Ability to switch modes (host side) - Working on: Extension running on guest side for switch & notifs

--- a/hideshare/package.json
+++ b/hideshare/package.json
@@ -20,8 +20,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "extension.revealLines",
-        "title": "Reveal Hidden Lines"
+        "command": "hideshare.enableLineMode",
+        "title": "Hideshare: Enable Line Mode"
+      },
+      {
+        "command": "hideshare.enableBlockMode",
+        "title": "Hideshare: Enable Block Mode"
       }
     ]
   },
