--- a/hideshare/package.json
+++ b/hideshare/package.json
@@ -3,7 +3,7 @@
   "displayName": "hideshare",
   "description": "liveshare for people with secrets",
   "publisher": "ThePenguins",
-  "version": "0.4.4",
+  "version": "0.4.8",
   "icon": "logo.jpg",
   "engines": {
     "vscode": "^1.95.0"
@@ -47,7 +47,8 @@
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
     "package": "npm run check-types && node esbuild.js --production",
-    "vscode:prepublish": "npm run package-web",
+    "vscode:prepublish": "npm run package",
+    "vscode:web-prepublish": "npm run package-web",
     "compile-web": "npm run check-types && node esbuild-web.js",
     "watch-web": "npm-run-all -p watch-web:*",
     "watch-web:esbuild": "node esbuild-web.js --watch",
